fixed the padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@ body {
   height:100%;
   padding:2rem 0;
 }
+
+@media screen and (max-width:700px) {
+  #root{
+    padding:0;
+  }
+}
